--- a/package.json
+++ b/package.json
@@ -3,5 +3,16 @@
   "dependencies": {
     "mongodb": "^1.4.9",
     "pg.js": "^3.4.2"
-  }
+  },
+  "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "none"
+  },
+  "description": "",
+  "main": "make_requests.js",
+  "devDependencies": {},
+  "scripts": {},
+  "author": "",
+  "license": "Please don't share :-)"
 }
